--- a/arm_32/c/test_arm_32_c_static_executable/Makefile
+++ b/arm_32/c/test_arm_32_c_static_executable/Makefile
@@ -2,11 +2,11 @@ CFLAGS = -g
 CC = arm-linux-gnueabihf-gcc
 LDFALGS = -g -static
 
-test_program : main.o
-	$(CC) $(LDFALGS) -o test_program main.o
+test_arm_32_c_static_executable : main.o
+	$(CC) $(LDFALGS) -o test_arm_32_c_static_executable main.o
 
 main.o : main.c
 	$(CC) $(CFLAGS) -c main.c
 	
 clean :
-	-rm *.o test_program
+	-rm *.o test_arm_32_c_static_executable
